fix: 3D not available on mobile device

--- a/src/components/v1/CardInfo/CardInfoInobank.scss
+++ b/src/components/v1/CardInfo/CardInfoInobank.scss
@@ -45,159 +45,5 @@
     @include media(desktop) {
       width: 20vw;
     }
-
-    &_title {
-      text-align: center;
-      color: $bgColor-primary;
-      font-weight: 700;
-      font-size: 1.8rem;
-    }
-
-    &_subtitle {
-      margin-top: 1rem;
-      color: $bgColor-primary;
-    }
-
-    &_subsubtitle {
-      margin-top: 0.3rem;
-      color: $bgColor-primary;
-      margin-bottom: 0.5rem;
-    }
-
-    &_list {
-      list-style: none;
-
-      li::before {
-        content: "";
-        /* Crée un pseudo-élément */
-        display: inline-block;
-        width: 15px;
-        /* Définit la largeur de l'image */
-        height: 15px;
-        /* Définit la hauteur de l'image */
-        background-image: url('/public/icons/users.svg');
-        /* Utilise l'image SVG comme image de fond */
-        background-size: contain;
-        /* Assure que l'image de fond s'adapte à la taille du pseudo-élément */
-        background-repeat: no-repeat;
-        /* Empêche la répétition de l'image de fond */
-        margin-right: 10px;
-        /* Ajoute un espace entre l'image et le texte */
-      }
-
-      &_list1 {
-        list-style: none;
-
-        li::before {
-          content: "";
-          /* Crée un pseudo-élément */
-          display: inline-block;
-          width: 15px;
-          /* Définit la largeur de l'image */
-          height: 15px;
-          /* Définit la hauteur de l'image */
-          background-image: url('/icons/flag.svg');
-          /* Utilise l'image SVG comme image de fond */
-          background-size: contain;
-          /* Assure que l'image de fond s'adapte à la taille du pseudo-élément */
-          background-repeat: no-repeat;
-          /* Empêche la répétition de l'image de fond */
-          margin-right: 10px;
-          /* Ajoute un espace entre l'image et le texte */
-        }
-
-        &_list1 {
-          list-style: none;
-
-          li::before {
-            content: "";
-            /* Crée un pseudo-élément */
-            display: inline-block;
-            width: 15px;
-            /* Définit la largeur de l'image */
-            height: 15px;
-            /* Définit la hauteur de l'image */
-            background-image: url('/icons/eye.svg');
-            /* Utilise l'image SVG comme image de fond */
-            background-size: contain;
-            /* Assure que l'image de fond s'adapte à la taille du pseudo-élément */
-            background-repeat: no-repeat;
-            /* Empêche la répétition de l'image de fond */
-            margin-right: 10px;
-            /* Ajoute un espace entre l'image et le texte */
-          }
-        }
-      }
-
-      &_list2 {
-        list-style: none;
-
-        li::before {
-          content: "";
-          /* Crée un pseudo-élément */
-          display: inline-block;
-          width: 15px;
-          /* Définit la largeur de l'image */
-          height: 15px;
-          /* Définit la hauteur de l'image */
-          background-image: url('/icons/user-check.svg');
-          /* Utilise l'image SVG comme image de fond */
-          background-size: contain;
-          /* Assure que l'image de fond s'adapte à la taille du pseudo-élément */
-          background-repeat: no-repeat;
-          /* Empêche la répétition de l'image de fond */
-          margin-right: 10px;
-          /* Ajoute un espace entre l'image et le texte */
-        }
-
-        &_list1 {
-          list-style: none;
-
-          li::before {
-            content: "";
-            /* Crée un pseudo-élément */
-            display: inline-block;
-            width: 15px;
-            /* Définit la largeur de l'image */
-            height: 15px;
-            /* Définit la hauteur de l'image */
-            background-image: url('/icons/edit-3.svg');
-            /* Utilise l'image SVG comme image de fond */
-            background-size: contain;
-            /* Assure que l'image de fond s'adapte à la taille du pseudo-élément */
-            background-repeat: no-repeat;
-            /* Empêche la répétition de l'image de fond */
-            margin-right: 10px;
-            /* Ajoute un espace entre l'image et le texte */
-          }
-        }
-
-        &_list2 {
-          list-style: none;
-
-          li::before {
-            content: "";
-            /* Crée un pseudo-élément */
-            display: inline-block;
-            width: 15px;
-            /* Définit la largeur de l'image */
-            height: 15px;
-            /* Définit la hauteur de l'image */
-            background-image: url('/public/icons/eye.svg');
-            /* Utilise l'image SVG comme image de fond */
-            background-size: contain;
-            /* Assure que l'image de fond s'adapte à la taille du pseudo-élément */
-            background-repeat: no-repeat;
-            /* Empêche la répétition de l'image de fond */
-            margin-right: 10px;
-            /* Ajoute un espace entre l'image et le texte */
-          }
-        }
-      }
-    }
-
-    a {
-      margin-top: 1rem;
-    }
   }
 }
